# cadenza

./: .gitignore  AGENTS.md  COMPILER_ARCHITECTURE.md  Cargo.toml  README.md  SALSA_MIGRATION_STATUS.md  flake.nix  test_wasm_encoder
crates/cadenza/: Cargo.toml  MCP_README.md  STATUS.md  build.rs
crates/cadenza-cli/: Cargo.toml  STATUS.md
crates/cadenza-cli/src/: about_cadenza.md  main.rs  testing.rs
crates/cadenza-cli/src/lsp/: mod.rs
crates/cadenza-cli/test-data/: README.md  arithmetic-basic.repl  closure.repl  errors.repl  strings.repl
crates/cadenza-compiler/: Cargo.toml  STATUS.md
crates/cadenza-compiler/src/: lib.rs  prelude.rs
crates/cadenza-compiler/test-data/semantics/: compound-types-alias-is-transparent.cdz  compound-types-alias-is-transparent.expected  compound-types-chained-field-access.cdz  compound-types-convert-struct-to-record.cdz  compound-types-convert-struct-to-record.expected  compound-types-empty-list.expected  compound-types-empty-record.expected  compound-types-enum-with-associated-data.cdz  compound-types-enum-with-associated-data.expected  compound-types-enum-with-record-variants.cdz  compound-types-enum-with-record-variants.expected  compound-types-error-assign-to-missing-field.cdz  compound-types-error-assign-to-missing-field.expected  compound-types-error-field-access-on-non-record.cdz  compound-types-error-field-access-on-non-record.expected  compound-types-error-heterogeneous-list.cdz  compound-types-error-heterogeneous-list.expected  compound-types-error-index-out-of-bounds.cdz  compound-types-error-index-out-of-bounds.expected  compound-types-error-missing-field.cdz  compound-types-error-missing-field.expected  compound-types-error-missing-required-field.cdz  compound-types-error-missing-required-field.expected  compound-types-error-negative-index.cdz  compound-types-error-negative-index.expected  compound-types-error-wrong-field-type.cdz  compound-types-error-wrong-field-type.expected  compound-types-field-access-on-expression.cdz  compound-types-field-access-on-expression.expected  compound-types-field-assignment-with-expression.cdz  compound-types-field-assignment-with-expression.expected  (+336 more)
crates/cadenza-core/: Cargo.toml  README.md
crates/cadenza-core/docs/: ARCHITECTURE.md  REMAINING_WORK.md
crates/cadenza-core/src/: db.rs  hir.rs  lib.rs
crates/cadenza-eval/: Cargo.toml  DESIGN.md  STATUS.md  TRAITS_AND_EFFECTS.md  TYPE_INFERENCE.md
crates/cadenza-eval/src/: compiler.rs  context.rs  db.rs  diagnostic.rs  env.rs  error.rs  eval.rs  generated.rs  interner.rs  ir.rs  lib.rs  map.rs  special_form.rs  special_forms.rs  testing.rs  tests.rs  trait_registry.rs  typeinfer.rs  unit.rs  value.rs
crates/cadenza-eval/test-data/: README.md  arith-float-mul.cdz  arith-left-assoc.cdz  arith-mixed-rev.cdz  assert-fail-with-message.cdz  assert-fail.cdz  assert-pass.cdz  assert-with-message.cdz  attr-fn-annotation.cdz  attr-unconsumed-error.cdz  block-fn-simple.cdz  block-function-body.cdz  block-mixed-exprs.cdz  block-nested.cdz  block-scope.cdz  block-simple.cdz  block-var-assign.cdz  error-cmp-type-mismatch-eq.cdz  error-cmp-type-mismatch-gt.cdz  error-cmp-type-mismatch-gte.cdz  error-cmp-type-mismatch-lt.cdz  error-cmp-type-mismatch-lte.cdz  error-cmp-type-mismatch-ne.cdz  error-let-invalid.cdz  error-undefined.cdz  example-01-welcome.cdz  example-02-literals.cdz  example-03-arithmetic.cdz  example-04-comparison.cdz  example-05-variables.cdz  example-06-functions.cdz  example-07-measures.cdz  example-08-blocks.cdz  example-08-lists.cdz  example-09-assertions.cdz  example-10-enums.cdz  example-10-tuples.cdz  example-functions.cdz  example-welcome.cdz  field-access-chained.cdz  (+59 more)
crates/cadenza-eval/tests/: ir_optimization_integration.rs
crates/cadenza-lsp/: Cargo.toml  STATUS.md
crates/cadenza-lsp/src/: core.rs  lib.rs
crates/cadenza-markdown/: Cargo.toml  README.md  STATUS.md
crates/cadenza-markdown/src/: error.rs  fuzz.rs  lib.rs  syntax.rs  testing.rs
crates/cadenza-markdown/test-data/: code-block-many-params.md  code-block-params.md  code-blocks-sql.md  code-blocks.md  complex.md  headings.md  inline-code.md  inline-deeply-nested.md  inline-emphasis.md  inline-mixed.md  inline-nested.md  lists.md  simple.md
crates/cadenza-markdown/tests/: deep_recursion_test.rs  hang_test.rs  parse_cadenza_example.rs  utf8_test.rs
crates/cadenza-syntax/: Cargo.toml  PARSER_ISSUES.md  STATUS.md  design-doc.md
crates/cadenza-syntax/examples/: ap-nested.cdz  example.cdz.ignore  lit-multiline-string.cdz  op-pipe.cdz
crates/cadenza-syntax/src/: ast.rs  contents.rs  fuzz.rs  generated.rs  hash.rs  iter.rs  lexer.rs  lib.rs  node.rs  parse.rs  source_file.rs  span.rs  test_record_parsing.rs  testing.rs  token.rs
crates/cadenza-syntax/test-data/: ap-op-add.cdz  ap-op-or.cdz  ap-simple.cdz  array-comma-first.cdz  array-mixed-lines.cdz  array-with-ap.cdz  array-with-exprs.cdz  block-simple.cdz  ident-emoji-mixed.cdz  ident-emoji-multiple.cdz  ident-emoji-underscore.cdz  ident-underscore-double.cdz  ident-underscore-with-numbers.cdz  ident-utf8-greek.cdz  ident-utf8-mixed-greek.cdz  ident-utf8-underscore.cdz  index-after-call.cdz  index-chained.cdz  index-expr.cdz  index-variable.cdz  index-vs-apply.cdz  let-op-or.cdz  lit-string-with-escape.cdz  measure-with-equals.cdz  op-field-access.cdz  op-field-after-call.cdz  op-field-and-path.cdz  op-field-chained.cdz  op-field-in-expr.cdz  op-field-long.cdz  op-field-with-ap.cdz  op-field-with-try.cdz  op-path-in-expr.cdz  op-path-long.cdz  op-path-simple.cdz  op-path-with-ap.cdz  op-path-with-field.cdz  op-path.cdz  op-pipe-then-try.cdz  op-pipe-try-chain.cdz  (+30 more)
crates/cadenza-web/: Cargo.toml  DESIGN.md  STATUS.md
crates/cadenza-web/app/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
crates/cadenza-web/src/: lib.rs  lib_test.rs
crates/cadenza-web/tests/: web_simulation.rs
crates/cadenza/src/: error.rs  lib.rs  main.rs  mcp.rs  object.rs  repl.rs  testing.rs  types.rs
crates/cadenza/test-data/: comments.repl  function-basic.repl  variables.repl
(+252 files in other folders)
