[workspace]
resolver = "3"

members = [ "crates/cadenza","crates/cadenza-*", "xtask"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/camshaft/cadenza"

[workspace.dependencies]
anyhow = "1"
hashbrown = "0.16"
miette = "7.6"
rustc-hash = "2.1"
axum = "0.7"
bach = "0.1.0"
bindgen = "0.71"
bolero = "0.13"
bolero-generator = "0.13"
bytes = "1.0"
cc = "1.0"
clap = { version = "4.5", features = ["derive"] }
criterion = "0.5"
futures = "0.3"
heck = "0.5"
insta = "1.0"
libc = "0.2"
linkme = "0.3"
lsp-types = "0.94"
parking_lot = "0.12"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full"] }
thiserror = "2.0"
tokio = { version = "1.0" }
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
wasm-encoder = "0.243"
wasmparser = "0.243"
wasmprinter = "0.243"
rustyline = "17.0"
dirs = "6.0"
