[package]
name = "cadenza-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cadenza-syntax = { path = "../cadenza-syntax" }
cadenza-tree = { path = "../cadenza-tree" }
miette.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
