[package]
name = "cadenza-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cadenza-syntax = { path = "../cadenza-syntax" }
miette.workspace = true
rowan.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
