[package]
name = "cadenza-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cadenza-eval = { path = "../cadenza-eval" }
cadenza-syntax = { path = "../cadenza-syntax" }
lsp-types.workspace = true
rowan.workspace = true
serde.workspace = true
serde_json.workspace = true
