[package]
name = "cadenza-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build/main.rs"

[dependencies]
cadenza-tree = { version = "0.1.0", path = "../cadenza-tree" }
serde.workspace = true

[dev-dependencies]
bolero.workspace = true
insta.workspace = true
