[package]
name = "cadenza-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[dependencies]
cadenza-eval = { path = "../cadenza-eval" }
cadenza-syntax = { path = "../cadenza-syntax" }
cadenza-markdown = { path = "../cadenza-markdown" }
cadenza-sql = { path = "../cadenza-sql" }
cadenza-gcode = { path = "../cadenza-gcode" }
cadenza-tree = { path = "../cadenza-tree" }
cadenza-lsp = { path = "../cadenza-lsp" }
wasm-bindgen.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
