[package]
name = "cadenza"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cadenza-eval = { path = "../cadenza-eval" }
cadenza-syntax = { path = "../cadenza-syntax" }
cadenza-lsp = { path = "../cadenza-lsp" }
clap.workspace = true
tower-lsp.workspace = true
lsp-types.workspace = true
tokio = { workspace = true, features = ["full"] }
rowan.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
