[package]
name = "cadenza"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
cadenza-syntax = { path = "../cadenza-syntax" }
cadenza-tree = { path = "../cadenza-tree" }
hashbrown.workspace = true
rustc-hash.workspace = true
serde = { workspace = true, features = ["derive"] }
